--- a/index.htm
+++ b/index.htm
@@ -28,9 +28,9 @@
 
       <ul class="navitems">
 
-        <li><a href="assignment-1/index.html">Assignment I</a></li>
-        <li><a href="assignment-2/index.html">Assignment II</a></li>
-        <li><a href="assignment-3/index.html">Assignment III</a></li>
+        <li><a href="Asgmt.-1/index.html">Asgmt. I</a></li>
+        <li><a href="Asgmt.-2/index.html">Asgmt. II</a></li>
+        <li><a href="Asgmt.-3/index.html">Asgmt. III</a></li>
         <li><a href="syllabus/index.html">Syllabus</a></li>
         <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
         <li><a href="index.htm">Class Roster</a></li>
@@ -49,26 +49,190 @@
           <li>
 
             <p class="monospace">GD 220.05</p>
-            <h1 id="graphic-design-2">Graphic Design 2</h1>
+            <h1 id="graphic-design-2">Our Class</h1>
             <p class="monospace"><strong>Spring 2018</strong><br>
             12 Students <br>
             16 Weeks <br>
 
           </li>
-          <li><a class="namelink" target="_blank" href="http://shbugrais.github.io">Shay Bugrais</a> <a class="sociallink" target="_blank" href="https://github.com/shbugrais">Github</a> <a class="sociallink"  href="https://codepen.io/shbugrais">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://nclaure.github.io">Nicholas Claure</a> <a class="sociallink"  target="_blank" href="https://github.com/nclaure">Github</a> <a class="sociallink"  href="https://codepen.io/nclaure">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a> <a class="sociallink"  target="_blank" href="https://github.com/noahmfisher">Github</a> <a class="sociallink"  href="https://codepen.io/noahmfisher">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://ljackson01.github.io">Lauren Jackson</a> <a class="sociallink"  target="_blank" href="https://github.com/ljackson01">Github</a><a class="sociallink"  href="https://codepen.io/ljackson01">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://sydneyjohnson.github.io">Sydney Johnson</a> <a class="sociallink"  target="_blank" href="https://github.com/sydneyjohnson">Github</a> <a class="sociallink"  href="https://codepen.io/sydneyjohnson">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://Skang04.github.io">Samuel Kang</a> <a class="sociallink"  target="_blank" href="https://github.com/Skang04">Github</a> <a class="sociallink"  href="https://codepen.io/Th0muel">Codepen</a></li>
-
-          <li><a class="namelink"  target="_blank" href="http://ljackson01.github.io">Kiley McArtney</a> <a class="sociallink"  target="_blank" href="https://github.com/kmcartney">Github</a> <a class="sociallink"  href="https://codepen.io/kmcartney">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://ZacharyMeyers.github.io">Zachary Meyers</a> <a class="sociallink"  target="_blank" href="https://github.com/ZacharyMeyers">Github</a> <a class="sociallink"  href="https://codepen.io/Meyers">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://jscaraville.github.io">Jenn Scaraville</a> <a class="sociallink"  target="_blank" href="https://github.com/jscaraville">Github</a> <a class="sociallink"  href="https://codepen.io/jscaraville">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://ljackson01.github.io">August Whitaker</a> <a class="sociallink"  target="_blank" href="#">Github</a> <a class="sociallink"  href="#">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a> <a class="sociallink"  target="_blank" href="https://github.com/Bclarendon">Github</a> <a class="sociallink"  href="https://codepen.io/bclarendon">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://pho01.github.io">Pei Jung Ho</a> <a class="sociallink"  target="_blank" href="https://github.com/pho01">Github</a> <a class="sociallink"  href="https://codepen.io/Pei_Jung">Codepen</a></li>
-          <li><a class="namelink"  target="_blank" href="http://musclesmunoz.github.io">Maren Munoz</a> <a  class="sociallink" target="_blank" href="https://github.com/musclesmunoz">Github</a> <a class="sociallink"  href="https://codepen.io/musclesmunoz">Codepen</a></li>
+          <li>
+            <div class="card-animation"><span class="f-init">S</span>
+            <span class="l-init">B</span></div>
+            <a class="namelink" target="_blank" href="http://shbugrais.github.io">Shay Bugrais</a>
+            <div class="sociallink-block">
+              <a class="sociallink" target="_blank" href="https://github.com/shbugrais">Github</a>
+              <a class="sociallink"  href="https://codepen.io/shbugrais">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://shbugrais.github.io/lavieenrose/">a.1 La Vie en Rose</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 2</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">N</span>
+            <span class="l-init">C</span></div>
+            <a class="namelink"  target="_blank" href="http://nclaure.github.io">Nicholas Claure</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/nclaure">Github</a> <a class="sociallink"  href="https://codepen.io/nclaure">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://nclaure.github.io/projectTM/">a.1 Imagine</a>
+              <a class="projectlink" target="_blank" href="https://nclaure.github.io/day3TM/">a.2 Tuesday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">N</span>
+            <span class="l-init">F</span></div>
+            <a class="namelink"  target="_blank" href="http://noahmfisher.github.io">Noah Fisher</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/noahmfisher">Github</a> <a class="sociallink"  href="https://codepen.io/noahmfisher">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/METAL-FACE-DOOM/">a.1 Metal Face</a>
+              <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/daily/">a.2 Saturday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">L</span>
+            <span class="l-init">J</span></div>
+            <a class="namelink"  target="_blank" href="http://ljackson01.github.io">Lauren Jackson</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/ljackson01">Github</a><a class="sociallink"  href="https://codepen.io/ljackson01">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://ljackson01.github.io/cold-little-heart/">a.1 Cold Little Heart</a>
+              <a class="projectlink" target="_blank" href="https://ljackson01.github.io/day-in-the-life/">a.2 Wednesday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">S</span>
+            <span class="l-init">J</span></div>
+            <a class="namelink"  target="_blank" href="http://sydneyjohnson.github.io">Sydney Johnson</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/sydneyjohnson">Github</a>
+              <a class="sociallink"  href="https://codepen.io/sydneyjohnson">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://sydneyjohnson.github.io/Demoweek2/index(p2).html">a.1 brains</a>
+              <a class="projectlink" target="_blank" href="https://github.com/sydneyjohnson/project2/blob/master/blog/index.html">a.2 Saturday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">S</span>
+            <span class="l-init">K</span></div>
+            <a class="namelink"  target="_blank" href="http://Skang04.github.io">Samuel Kang</a>
+            <div class="sociallink-block">
+             <a class="sociallink"  target="_blank" href="https://github.com/Skang04">Github</a> <a class="sociallink"  href="https://codepen.io/Th0muel">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://skang04.github.io/lyric-website/">a.1 New Rules</a>
+              <a class="projectlink" target="_blank" href="https://skang04.github.io/day_in_life/">a.2 Wednesday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">K</span>
+            <span class="l-init">M</span></div>
+            <a class="namelink"  target="_blank" href="http://kmcartney.github.io">Kiley McArtney</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/kmcartney">Github</a>
+              <a class="sociallink"  href="https://codepen.io/kmcartney">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment1/">a.1 Fairy Feller</a>
+              <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment2/">a.2 Tuesday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">Z</span>
+            <span class="l-init">M</span></div>
+            <a class="namelink"  target="_blank" href="http://ZacharyMeyers.github.io">Zachary Meyers</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/ZacharyMeyers">Github</a>
+              <a class="sociallink"  href="https://codepen.io/Meyers">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/meyerslyric/">a.1 Psycho Killer</a>
+              <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/timeline/">a.2 Tuesday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">J</span>
+            <span class="l-init">S</span></div>
+            <a class="namelink"  target="_blank" href="http://jscaraville.github.io">Jenn Scaraville</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/jscaraville">Github</a>
+              <a class="sociallink"  href="https://codepen.io/jscaraville">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://jscaraville.github.io/lyricalmapping/">a.1 Fireworks</a>
+              <a class="projectlink" target="_blank" href="https://jscaraville.github.io/day-in-the-life/index.html">a.2 Tuesday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">A</span>
+            <span class="l-init">W</span></div>
+            <a class="namelink"  target="_blank" href="http://grwhit20.github.io">August Whitaker</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/grwhit20">Github</a>
+              <a class="sociallink"  href="#">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://grwhit20.github.io/jalo-wiki/">a.1 Jalo</a>
+              <a class="projectlink" target="_blank" href="https://grwhit20.github.io/MY-DAY/">a.2 Monday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">B</span>
+            <span class="l-init">C</span></div>
+            <a class="namelink"  target="_blank" href="http://Bclarendon.github.io">Bryan Clarendon</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/Bclarendon">Github</a>
+              <a class="sociallink"  href="https://codepen.io/bclarendon">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://bclarendon.github.io/project1-songscroll/">a.1 Feel It Still</a>
+              <a class="projectlink" target="_blank" href="https://bclarendon.github.io/day-in-the-life/">a.2 Wednesday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">P</span>
+            <span class="l-init">H</span></div>
+            <a class="namelink"  target="_blank" href="http://pho01.github.io">Pei Jung Ho</a>
+            <div class="sociallink-block">
+              <a class="sociallink"  target="_blank" href="https://github.com/pho01">Github</a>
+              <a class="sociallink"  href="https://codepen.io/Pei_Jung">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://pho01.github.io/GD2-project1/">a.1 Nothing Else</a>
+              <a class="projectlink" target="_blank" href="https://pho01.github.io/some-days/peiday.html">a.2 Thursday</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
+          <li>
+            <div class="card-animation"><span class="f-init">M</span>
+            <span class="l-init">M</span></div>
+            <a class="namelink"  target="_blank" href="http://musclesmunoz.github.io">Maren Munoz</a>
+            <div class="sociallink-block">
+              <a class="sociallink" target="_blank" href="https://github.com/musclesmunoz">Github</a>
+              <a class="sociallink"  href="https://codepen.io/musclesmunoz">Codepen</a>
+            </div>
+            <div class="projectlink-block">
+              <a class="projectlink" target="_blank" href="https://musclesmunoz.github.io/rise-up/">a.1 Rise Up</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 2</a>
+              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+            </div>
+          </li>
         </ul>
 
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
