--- a/index.htm
+++ b/index.htm
@@ -65,8 +65,8 @@
             </div>
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://shbugrais.github.io/lavieenrose/">a.1 La Vie en Rose</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 2</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank" href="https://shbugrais.github.io/html/awitl.html">a.2 Weekend</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -79,7 +79,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://nclaure.github.io/projectTM/">a.1 Imagine</a>
               <a class="projectlink" target="_blank" href="https://nclaure.github.io/day3TM/">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -92,7 +92,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/METAL-FACE-DOOM/">a.1 Metal Face</a>
               <a class="projectlink" target="_blank" href="https://noahmfisher.github.io/daily/">a.2 Saturday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -105,7 +105,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://ljackson01.github.io/cold-little-heart/">a.1 Cold Little Heart</a>
               <a class="projectlink" target="_blank" href="https://ljackson01.github.io/day-in-the-life/">a.2 Wednesday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -119,7 +119,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://sydneyjohnson.github.io/Demoweek2/index(p2).html">a.1 brains</a>
               <a class="projectlink" target="_blank" href="https://github.com/sydneyjohnson/project2/blob/master/blog/index.html">a.2 Saturday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -132,7 +132,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://skang04.github.io/lyric-website/">a.1 New Rules</a>
               <a class="projectlink" target="_blank" href="https://skang04.github.io/day_in_life/">a.2 Wednesday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -146,7 +146,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment1/">a.1 Fairy Feller</a>
               <a class="projectlink" target="_blank" href="https://kmcartney.github.io/Assignment2/">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -160,7 +160,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/meyerslyric/">a.1 Psycho Killer</a>
               <a class="projectlink" target="_blank" href="https://zacharymeyers.github.io/timeline/">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -174,7 +174,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://jscaraville.github.io/lyricalmapping/">a.1 Fireworks</a>
               <a class="projectlink" target="_blank" href="https://jscaraville.github.io/day-in-the-life/index.html">a.2 Tuesday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -188,7 +188,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://grwhit20.github.io/jalo-wiki/">a.1 Jalo</a>
               <a class="projectlink" target="_blank" href="https://grwhit20.github.io/MY-DAY/">a.2 Monday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -202,7 +202,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://bclarendon.github.io/project1-songscroll/">a.1 Feel It Still</a>
               <a class="projectlink" target="_blank" href="https://bclarendon.github.io/day-in-the-life/">a.2 Wednesday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -216,7 +216,7 @@
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://pho01.github.io/GD2-project1/">a.1 Nothing Else</a>
               <a class="projectlink" target="_blank" href="https://pho01.github.io/some-days/peiday.html">a.2 Thursday</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
+              <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
           </li>
           <li>
@@ -229,8 +229,6 @@
             </div>
             <div class="projectlink-block">
               <a class="projectlink" target="_blank" href="https://musclesmunoz.github.io/rise-up/">a.1 Rise Up</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 2</a>
-              <a class="projectlink" target="_blank" href="#">Asgmt. 3</a>
             </div>
           </li>
         </ul>
