--- a/index.htm
+++ b/index.htm
@@ -117,7 +117,7 @@
               <a class="sociallink"  href="https://codepen.io/sydneyjohnson">Codepen</a>
             </div>
             <div class="projectlink-block">
-              <a class="projectlink" target="_blank" href="https://sydneyjohnson.github.io/Demoweek2/index(p2).html">a.1 brains</a>
+              <a class="projectlink" target="_blank" href="https://sydneyjohnson.github.io/Demoweek2/index(p2).html">a.1 Brains</a>
               <a class="projectlink" target="_blank" href="https://github.com/sydneyjohnson/project2/blob/master/blog/index.html">a.2 Saturday</a>
               <a class="projectlink" target="_blank">a.3 tba</a>
             </div>
