--- a/index.htm
+++ b/index.htm
@@ -28,9 +28,9 @@
 
       <ul class="navitems">
 
-        <li><a href="Asgmt.-1/index.html">Asgmt. I</a></li>
-        <li><a href="Asgmt.-2/index.html">Asgmt. II</a></li>
-        <li><a href="Asgmt.-3/index.html">Asgmt. III</a></li>
+        <li><a href="assignment-1/index.html">Asgmt. I</a></li>
+        <li><a href="assignment-1/index.html">Asgmt. II</a></li>
+        <li><a href="assignment-1/index.html">Asgmt. III</a></li>
         <li><a href="syllabus/index.html">Syllabus</a></li>
         <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
         <li><a href="index.htm">Class Roster</a></li>
