--- a/index.htm
+++ b/index.htm
@@ -27,13 +27,14 @@
         <div class="openlink">&#9776;</div>
 
       <ul class="navitems">
-
-        <li><a href="assignment-1/index.html">Asgmt. I</a></li>
-        <li><a href="assignment-1/index.html">Asgmt. II</a></li>
-        <li><a href="assignment-1/index.html">Asgmt. III</a></li>
+        <li><a href="index.htm">GD 220.05</a></li>
+        <li><h6>Assignment Sheets</h6></li>
+        <li><a href="assignment-1/index.html">Lyrical Mapping</a></li>
+        <li><a href="assignment-2/index.html">A Day in the Life</a></li>
+        <li><a href="assignment-3/index.html">We Could Be Heroes</a></li>
+        <li><h6>Class Materials</h6></li>
         <li><a href="syllabus/index.html">Syllabus</a></li>
         <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
-        <li><a href="index.htm">Class Roster</a></li>
         <li><a class="closelink" href="#">×</a></li>
       </ul>
 
