--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -23,16 +23,16 @@
         <div class="openlink">&#9776;</div>
 
         <ul class="navitems">
-          <li><a href="../index.htm">Our Class</a></li>
-          <li><a href="../assignment-1/index.html">Assignment I</a></li>
-          <li><a href="../assignment-2/index.html">Assignment II</a></li>
-          <li><a href="../assignment-3/index.html">Assignment III</a></li>
+          <li><a href="../index.htm">GD 220.05</a></li>
+          <li><h6>Assignment Sheets</h6></li>
+          <li><a href="../assignment-1/index.html">Lyrical Mapping</a></li>
+          <li><a href="../assignment-2/index.html">A Day in the Life</a></li>
+          <li><a href="../assignment-3/index.html">We Could Be Heroes</a></li>
+          <li><h6>Class Materials</h6></li>
           <li><a href="../syllabus/index.html">Syllabus</a></li>
           <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
-          <li><a href="../index.htm">Class Roster</a></li>
-
           <li><a class="closelink" href="#">×</a></li>
-      </ul>
+        </ul>
 
       </div>
         <!--[if lte IE 9]>
