--- a/assignment-2/index.html
+++ b/assignment-2/index.html
@@ -30,6 +30,7 @@
           <li><a href="../assignment-3/index.html">We Could Be Heroes</a></li>
           <li><h6>Class Materials</h6></li>
           <li><a href="../syllabus/index.html">Syllabus</a></li>
+          <li><a href="../index/index.html">Index</a></li>
           <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
           <li><a class="closelink" href="#">×</a></li>
         </ul>
