--- a/index/index.html
+++ b/index/index.html
@@ -45,9 +45,9 @@
 
         <!-- Add your site or application content here -->
         <div class="animation">
-          <span class="g">G</span>
-          <span class="d">D</span>
-          <span class="two">2</span>
+          <span class="g">&#8594;</span>
+          <span class="d">&#9745;</span>
+          <span class="two">&#8541;</span>
 
         </div>
     <div class="main-content-well">
@@ -76,7 +76,7 @@
 <p>A good <strong>reference library</strong> of style attributes:<br>
 <a class="pointerlink" href="https://cssreference.io/typography/">cssreference.io</a></p>
 <p>A comprehensive, multipart  <strong>CSS tutorial</strong>.<br>
-<a href="https://www.w3schools.com/css/">https://www.w3schools.com/css/</a></p>
+<a class="pointerlink" href="https://www.w3schools.com/css/">https://www.w3schools.com/css/</a></p>
 <p>A useful <strong>front-end template</strong> for starting a project<br>
 <a class="pointerlink" href="https://www.w3schools.com/css/">https://html5boilerplate.com</a></p>
 <h2 id="transitions">Transitions in CSS</h2>
