--- a/index/index.html
+++ b/index/index.html
@@ -17,7 +17,7 @@
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Hanalei+Fill|Shrikhand" rel="stylesheet">
     </head>
-    <body>
+    <body class="index">
       <div class="main-nav">
 
         <div class="openlink">&#9776;</div>
@@ -30,8 +30,8 @@
           <li><a href="../assignment-3/index.html">We Could Be Heroes</a></li>
           <li><h6>Class Materials</h6></li>
           <li><a href="../syllabus/index.html">Syllabus</a></li>
+          <li><a class="external-link" href="https://mica.instructure.com/courses/2441">Instructure</a></li>
           <li><a href="../index/index.html">Index</a></li>
-          <li><a href="https://mica.instructure.com/courses/2441">Instructure</a></li>
           <li><a class="closelink" href="#">×</a></li>
         </ul>
 
@@ -57,14 +57,14 @@
         <div class="aside-left monospace">
         <p class="monospace">
           <strong>Spring 2018</strong>
-          <br/><br/><a href="#">Useful Resources</a>
-          <a href="#">Transitions in CSS</a>
-          <a href="#">Creating Animations in CSS</a>
-          <a href="#">Media queries &amp; mobile styles:</a>
-          <a href="#">SVGs: exporting &amp; animating</a>
-          <a href="#">On building layouts:</a>
-          <a href="#">jQuery for Basic Interactions</a>
-          <a href="#">Parting Thoughts</a>
+          <br/><br/><a href="#useful-resources">Useful Resources</a>
+          <a href="#transitions">Transitions in CSS</a>
+          <a href="#creating-animations">Creating Animations in CSS</a>
+          <a href="#media-queries--mobile-styles">Media queries &amp; mobile styles:</a>
+          <a href="#svg">SVGs: exporting &amp; animating</a>
+          <a href="#on-building-layouts">On building layouts:</a>
+          <a href="#jquery-for-basic-interactions">jQuery for Basic Interactions</a>
+          <a href="#components">Parting Thoughts</a>
         </p>
       </div>
 
@@ -203,9 +203,27 @@
 </code></pre>
 
 <h2 id="components">Parting Thoughts</h2>
-<h3>Designing Components</h3>
+
+<h3>Keep experimenting</h3>
+<p>I encourage every one of you to continue to experiment using the tools at your disposal. Continue to make pages and put them online. Make a poster for an upcoming show. Edit your personal pages on github. The way to get better at HTML, CSS, and Javascript
+</p>
+
+<h3>Seek out answers</h3>
+<p>Everything you see on the web is by it's very nature <strong>open source</strong> open source. DOn't forget that you can always check to see how something is made by using the <strong>inspect tool</strong>. Also don't forget that you can always <strong>Google</strong> questions.
+</p>
+
+
+<h3>Prototype</h3>
 <p>I tend to start with designing specific  <strong>components</strong>  as the basis of a design because it allows me to play with details of the system without boxing myself in to specific viewport widths.  <a href="https://codepen.io/SpenceJMNelson/pen/mqyxga">Here’s an example of a component i designed in my own work. </a> Take a look at the code as well, as it might provide some insights into more advanced uses of hovers &amp; transitions.</p>
 <p>Here, I used a small card component to play with how type and color worked together on a larger page I was working on. This component could pe put anywhere into a larger design system, and doesn’t rely on browser width.</p>
+
+<h3>Thinking about Outcomes</h3>
+<p>This year, we tried to accomplish the following:</p>
+<p><em>Demonstrate an understanding of hierarchy as it applies to interactive media.</em><br/>The projects that you all participated in this semester were meant to make you think about the presentation of different types of content on the screen.
+</p>
+<p><em>Employ concepts, processes, and production tools for interaction design.</em><br/>Hopefully, this class showed you some ways of thinking about interaction design, from creating rythm with type and scrolling, to creating navigation structures to help a user move through content, to creating unified visual systems that run throughout a work. My goal was to imagine a tool-agnostic approach to designing websites.</p>
+<p><em>Develop a process that adapts to new tools, best practices and mediums.</em><br/>This class was oriented around giving you the tools to quickly build and deploy typeset, interactive works onto the web, using a minimal amount of paid tools. Creating works in HTML and CSS directly lets you the designer circumvent a lot of expensive and complex systems and software, and get designed work in a public space quickly and with a minimal expenditure of resources. By focusing on designing in the medium itself, I hope I was able to emphasize that the web design tools like sketch, flinto, principal, keynote, photoshop, et. al. are abstractions; ways of defining how the final thing will look and move. Deliverables produced in these and future tools should be viewed as such. Don't get too invested in any one tool.</p>
+<p><em>Develop an understanding of interaction as an essential component of communication.</em><br/>Design involves not just setting type, but also imagining how a user is going to interact with the work. In print, these interactions could be the act of opening a brochure, or breaking a sticker that seals an envelope. The web is no different. You are able to set the rythm of the work by </p>
 
         </div>
 
